Внесены изменения в главный файл и файл стилей.
Доработала скрипт на модальное окно.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <div class="section-header">Портфолио</div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="portfolio-block"><img src="img/portfolio/1.jpg" alt="Работа №1"><a href="#"> Смотреть работу</a></div>
+            <div class="portfolio-block"><img src="img/portfolio/1.jpg" alt="Работа №1"><a data-toggle="modal" href="#work-1"> Смотреть работу</a></div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-block"><img src="img/portfolio/2.jpg" alt="Работа №2"><a href="#"> Смотреть работу</a></div>
+            <div class="portfolio-block"><img src="img/portfolio/2.jpg" alt="Работа №2"><a href="#work-2"> Смотреть работу</a></div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-block"><img src="img/portfolio/3.jpg" alt="Работа №3"><a href="#"> Смотреть работу</a></div>
+            <div class="portfolio-block"><img src="img/portfolio/3.jpg" alt="Работа №3"><a href="#work-3"> Смотреть работу</a></div>
           </div>
         </div>
       </div>
@@ -80,16 +80,22 @@
         <h4 class="modal-title">Работа №1</h4>
       </div>
       <div class="modal-body">
-        ...
+        <div class="row">
+        <div class="col-lg-5">
+        <img src="img/portfolio/1.jpg" alt="Первая работа">
+        </div>
+        <div class="col-lg-7">
+        <h4>Сайт для ресторана</h4>
+        <p>Описание сайта</p>
+        <a href="#" class="modal-btn">Заказать такой сайт</a>
+        </div>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
+       </div>
   </div>
 </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
